Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -13,12 +13,14 @@
     }
 
     .logo {
-        width:150px;
+        width:100px;
         margin:15px;
     }
 
-    h2 {
-        padding:10px;
+    .subtitle {
+        margin-top:30px;
+        padding-bottom: 10px;
+        font-size:xx-large;
     }
 
     p {
@@ -34,23 +36,27 @@ simple. Le principe consiste à adapter le modèle proposé pour le faire corres
 exactement à votre promotion.
     En gros, on décompose cela en 4 sections.<br>
 
-<table style="vertical-align: top;"><tr>
+<div class="subtitle" id="description">Descripion de votre promotion</div>
+<table style="vertical-align: top;margin:0;"><tr>
     <td style="text-align: center;">
         <img src="https://web.reducshare.com/img/discount.png" class="logo">
     </td>
     <td>
-        <h2><a href="#description">Descripion de votre promotion</a></h2>
-        <p>
+
             La première section décrit la nature de l'offre. En premier lieu il faut trouver une phrase d'accroche qui
             sera présentée en premier dans votre promotion.<br><br>
 
             Ensuite il faut préciser ce que le client gagne. Evidemment cela dépend de ce que vous vendez
-        <ul>
-            <li>pour un commerce ça pourrat être une réduction sur le prix de certains articles</li>
-            <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes, une remise sur l'addition</li>
-            <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite, un petit déjeuné offert</li>
-            <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de cours, de massage</li>
-        </ul>
+    </td>
+</tr>
+</table>
+
+<ul>
+    <li>pour un commerce ça pourrat être une réduction sur le prix de certains articles</li>
+    <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes, une remise sur l'addition</li>
+    <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite, un petit déjeuné offert</li>
+    <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de cours, de massage</li>
+</ul>
 
         Il faut ensuite indiquer le symbole de ce que l'on gagne. Ce symbole sera utilisable pour présenté
         la promotion. Idéalement, cela peut être un emoticon mais également 'min' pour minute, "%"
@@ -66,15 +72,11 @@ exactement à votre promotion.
 
         On passe aux autres sections, mais vous avez fait le plus dur.
 
-        </p>
 
-    </td>
-</tr>
-</table>
 <table>
 <tr>
     <td>
-        <h2><a href="#visuel">Le visuel</a></h2>
+        <div class="subtitle" id="visuel">Le visuel</div>
         <p>
             Ici c'est simple on doit juste choisir une image pour le visuel principal du coupon.
             Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
@@ -88,6 +90,9 @@ exactement à votre promotion.
              class="logo">
     </td>
 </tr></table>
+
+<div id="avantage" class="subtitle">L'avantage client</div>
+Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
 <table>
     <tr>
         <td>
@@ -95,49 +100,42 @@ exactement à votre promotion.
                  class="logo">
         </td>
         <td>
-            <h2><a href="#avantage">L'avantage client</a></h2>
-            <p>
-                Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
+
+
             <ul>
-                <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li>
-                <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li>
+                <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li><br>
+                <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li><br>
                 <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
             </ul>
 
-            </p>
+
         </td>
     </tr>
 </table>
+
+<div class="subtitle" id="budget">Maitriser le budget</div>
 <table>
     <tr>
         <td>
-
-            <h2><a href="#budget">Maitriser le budget</a></h2>
-            <p>
-                Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
-                <br>
-                Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
-                Celui ci à tout intérêt à l'utiliser.
-
-                <br><br>
-                Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.
-                Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
-
-                <br><br>
-                Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
-                de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
-
-                Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
-
-            </p>
-
+            Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
+            <br>
+            Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
+            Celui ci à tout intérêt à l'utiliser.
         </td>
         <td>
             <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/money-bag_1f4b0.png" class="logo">
         </td>
     </tr>
-
 </table>
+Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.
+Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
+
+<br><br>
+Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
+de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+
+Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
+
 
 
 
