--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ReducShare</title>
+  <title>REDUCSHARE</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -74,7 +74,7 @@
   <header class="masthead">
     <div class="container d-flex h-100 align-items-center">
       <div class="mx-auto text-center">
-        <h1 class="mx-auto my-0 text-uppercase">ReducShare</h1>
+        <h1 class="mx-auto my-0 text-uppercase">REDUCSHARE</h1>
         <br><br>
         <h2 class="text-white-50 mx-auto mt-2 mb-5">
           Le marketing viral, qui respecte la vie privée, à destination des indépendants, du commerce de proximité et des TPE/PME
@@ -229,7 +229,7 @@
       <h4 class="text-uppercase m-0 text-light">En savoir plus</h4>
       <br><br>
       <span class="text-light">
-      ReducShare permet de fabriquer rapidement de nombreux types de promotions.<br>
+      REDUCSHARE permet de fabriquer rapidement de nombreux types de promotions.<br>
         Voici quelques exemples que vous pouvez personnaliser et <span class="text-primary">TESTER MAINTENANT !</span>
       </span>
       <br><br>
@@ -277,7 +277,7 @@
               <h4 class="text-uppercase m-0">Edition</h4>
               <hr class="my-4">
               <div class="small text-black-50">
-                ReducShare est développée et éditée par F80,
+                REDUCSHARE est développée et éditée par F80,
                 12 rue Martel, Paris 10
               </div>
             </div>
@@ -330,7 +330,7 @@
   <!-- Footer -->
   <footer class="bg-secondary small text-center text-white-50">
     <div class="container">
-      Copyright &copy; ReducShare 2019
+      Copyright &copy; REDUCSHARE 2019
     </div>
   </footer>
 
