Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -241,6 +241,9 @@
       <br><br>
 
       <!-- Vidéo d'explication -->
+      <span class="text-light">
+        Pour en savoir plus sur le fonctionnement de REDUCSHARE et les bénéfices vendeur
+      </span>
       <div class="row" style="height:400px;">
         <div class="col-md-10 col-lg-8 mx-auto text-center">
           <iframe style="display:inline-block;max-height:500px;width:80vmin;height:45vmin;" frameborder="0"
@@ -249,6 +252,25 @@
           </iframe>
         </div>
       </div>
+
+      <br><br>
+      <span class="text-light">
+      Pour en savoir plus sur les outils d'analyse et comparaison de campagne promotionnelle via REDUCSHARE:
+      </span>
+
+      <div class="row" style="height:400px;">
+        <div class="col-md-10 col-lg-8 mx-auto text-center">
+          <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/yOZDEYkMzaE" frameborder="0" -->
+                  <!--allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>-->
+          <!--</iframe>-->
+          <!---->
+          <iframe style="display:inline-block;max-height:500px;width:80vmin;height:45vmin;" frameborder="0"
+                  src="https://www.youtube.com/embed/yOZDEYkMzaE"
+                  allowfullscreen>
+          </iframe>
+        </div>
+      </div>
+
 
 
     </div>
