Website of ReducShare

--- a/faqs/init_shop.html
+++ b/faqs/init_shop.html
@@ -48,6 +48,12 @@ une adresse postale, ou virtuel avec une adresse internet (en développement).
         </p>
     </td>
 </tr></table>
+<br>Une fois créé, votre point de vente peut être modifié. Depuis ce point de vente vous pouvez :
+<ul>
+    <li>Lancer des promotions</li>
+    <li>Editer une affiche permettant à vos clients de récupérer votre dernière promotion</li>
+    <li>Analyser la diffusion de vos dernières promotions pour optimiser les suivantes</li>
+</ul>
 
 </body>
 </html>
