Website of ReducShare

--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>ReducShare</title>
+  <title>REDUCSHARE</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -73,7 +73,7 @@
          href="#collapseOne1" aria-expanded="true"
          aria-controls="collapseOne1">
         <h5 class="mb-0">
-          A quoi sert ReducShare ?
+          A quoi sert REDUCSHARE ?
           <i class="fas fa-angle-down rotate-icon"></i>
         </h5>
       </a>
@@ -84,9 +84,9 @@
          aria-labelledby="headingOne1"
          data-parent="#accordionEx">
       <div class="card-body">
-        ReducShare permet à des vendeurs de fabriquer en quelques clics des
+        REDUCSHARE permet à des vendeurs de fabriquer en quelques clics des
         réductions dont le montant augmente à chaque fois qu’elles sont repartagées par les clients.
-          Ainsi ReducShare permet,
+          Ainsi REDUCSHARE permet,
 
         <br><br>
 
