--- a/faqs/build_promo.html
+++ b/faqs/build_promo.html
@@ -17,7 +17,7 @@
 
 </head>
 <body style="font-family: Nunito;letter-spacing: .0625em;">
-Pour lancer une promotion il faut avoir au moins un point de vente (ou en créé un)
+Pour lancer une nouvelle promotion, il faut avoir au moins un point de vente et en créé donc un si ce n'est pas le cas.
 <br>
 Dans l'application, depuis le point de vente, on ajoute la promotion,
 On choisi un modèle puis on le personnalise pour arriver à la promotion idéal !<br>
@@ -25,9 +25,9 @@ Les valeurs à saisir sont regroupées en plusieurs sections :
 <ul>
     <li>Une description de la nature de la promotion : phrase d'introduction, ce que l'on gagne, conditions d'obtentions</li>
     <li>Le visuel de la promotion</li>
-    <li>L'évolution de l'avantage. C'est le coeur de ReducShare. Le vendeur va préciser comment la promotion augmente quand le client la repartage ou
+    <li>L'évolution de l'avantage. C'est le coeur de REDUCSHARE. Le vendeur va préciser comment la promotion augmente quand le client la repartage ou
     quand un des coupons qu'il a distribué à causer une vente</li>
-    <li>La maitrise du budget. En effet ReducShare permet de limiter la promotion par client mais aussi d'interrompre automatiquement la promotion
+    <li>La maitrise du budget. En effet REDUCSHARE permet de limiter la promotion par client mais aussi d'interrompre automatiquement la promotion
     quand le temps est dépassé ou que le stock prévu initialement pour la promotion est atteind.
     </li>
 </ul>
