--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -12,130 +12,140 @@
         font-variant: normal;
     }
 
+    .mylist {
+        font-size:small;
+        display:inline-block;
+    }
+
     .logo {
-        width:100px;
-        margin:15px;
+        width:15vw;
+        max-width:200px;
+        margin:30px;
+        float: left;
+    }
+
+    .logo-right {
+        width:15vw;
+        max-width:200px;
+        margin:30px;
+        float: right;
+
     }
 
     .subtitle {
         margin-top:30px;
         padding-bottom: 10px;
         font-size:xx-large;
+        display:inline-table;
+        width:100vw;
     }
 
-    p {
+
+    .mytext {
+        font-size:small;
         padding-left:15px;
+        margin-bottom: 30px;
     }
+
 </style>
 <body style="background-color:#11162c;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
 <h1 style="width:100%;text-align: center;">Créer votre coupon promotionnel</h1>
 
 <br>
+<p class="mytext">
 Même si cela peut sembler un peu impressionnant au début, la fabrication d'une promotion est plutôt
 simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
 exactement à votre promotion.
-    En gros, on décompose cela en 4 sections.<br>
-
+    En gros, on décompose cela en 4 sections.
+</p>
 <div class="subtitle" id="description">Descripion de votre promotion</div>
-<table style="vertical-align: top;margin:0;"><tr>
-    <td style="text-align: center;">
-        <img src="https://web.reducshare.com/img/discount.png" class="logo">
-    </td>
-    <td>
 
+        <img src="/img/screen0.png" class="logo">
+        <p class="mytext">
+            La fabrication d'un coupon promotionnel, commence souvent par trouver un modèle approchant afin de limiter le
+            nombre de champs à personnaliser.<br>
             La première section décrit la nature de l'offre. En premier lieu il faut trouver une phrase d'accroche qui
-            sera présentée en premier dans votre promotion.<br><br>
+                sera présentée en premier dans votre promotion.<br><br>
+                Ensuite il faut préciser ce que le client gagne. Evidemment cela dépend de ce que vous vendez
 
-            Ensuite il faut préciser ce que le client gagne. Evidemment cela dépend de ce que vous vendez
-    </td>
-</tr>
-</table>
+            <ul class="mylist">
+                <li>pour un commerce ça pourrat être une réduction sur le prix de certains articles</li>
+                <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes, une remise sur l'addition</li>
+                <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite, un petit déjeuné offert</li>
+                <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de cours, de massage</li>
+            </ul>
 
-<ul>
-    <li>pour un commerce ça pourrat être une réduction sur le prix de certains articles</li>
-    <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes, une remise sur l'addition</li>
-    <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite, un petit déjeuné offert</li>
-    <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de cours, de massage</li>
-</ul>
+            <br>
 
-        Il faut ensuite indiquer le symbole de ce que l'on gagne. Ce symbole sera utilisable pour présenté
-        la promotion. Idéalement, cela peut être un emoticon mais également 'min' pour minute, "%"
-        pour une réduction sur un prix de vente.
-        <br><br>
-        Enfin, il faut préciser les conditions d'application de la promotion. A minima le client doit
-        présenter son coupon de réduction sur son smartphone. Il est possible d'appliquer d'autres restrictions.
-        Par exemple,<br><br>
-        <ul>
-            <li>pour un happy hour, on précisera que le coupon n'est valable qu'entre 17h et 19h par exemple</li>
-            <li>pour un commerçant on pourra préciser qu'une promotion ne s'applique que si le montant des achats est supérieur à un minimum prédéfini</li>
-        </ul>
+            Il faut ensuite indiquer le symbole de ce que l'on gagne. Ce symbole sera utilisable pour présenté
+            la promotion. Idéalement, cela peut être un emoticon mais également 'min' pour minute, "%"
+            pour une réduction sur un prix de vente.
 
-        On passe aux autres sections, mais vous avez fait le plus dur.
+            <br><br>
+            Enfin, il faut préciser les conditions d'application de la promotion. A minima le client doit
+            présenter son coupon de réduction sur son smartphone. Il est possible d'appliquer d'autres restrictions.
+            Par exemple,<br><br>
+            <ul class="mylist">
+                <li>pour un happy hour, on précisera que le coupon n'est valable qu'entre 17h et 19h par exemple</li>
+                <li>pour un commerçant on pourra préciser qu'une promotion ne s'applique que si le montant des achats est supérieur à un minimum prédéfini</li>
+            </ul>
 
+            On passe aux autres sections, mais vous avez fait le plus dur.
+        </p>
 
-<table>
-<tr>
-    <td>
-        <div class="subtitle" id="visuel">Le visuel</div>
+<div class="projects-section">
+<div class="subtitle" id="visuel">Le visuel</div>
+
+<img src="/img/screen2.png"
+     class="logo-right">
         <p>
-            Ici c'est simple on doit juste choisir une image pour le visuel principal du coupon.
+            Ici c'est simple ! <br>
+            on doit juste choisir une image pour le visuel principal du coupon.
             Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
-            mis a votre disposition ou de votre téléphone, de votre ordinateur. Bref toutes les sources sont possibles.<br>
-            Le système coupe volontairement l'image au mieux pour la présenter dans le format du coupon.
+            mis a votre disposition ou de votre téléphone, de votre ordinateur.<br>
+
+            <br>Bref toutes les sources sont possibles.<br><br>
+
+            Le système recadre volontairement l'image au mieux pour la présenter dans le format du coupon.
 
         </p>
-    </td>
-    <td>
-        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/eyes_1f440.png"
-             class="logo">
-    </td>
-</tr></table>
+</div>
+
 
 <div id="avantage" class="subtitle">L'avantage client</div>
-Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
-<table>
-    <tr>
-        <td>
-            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/white-smiling-face_263a.png"
+            <img src="/img/screen3.png"
                  class="logo">
-        </td>
-        <td>
-
-
-            <ul>
+      <p class="mytext">
+            Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
+            <br><br>Permettre une augmentation significative permet d'augmenter la viralité de votre promotion. Il ne faut pas hésiter à vraiment récompenser le partage et la transformation, quitte à
+            limité le stock réservé à la promotion.
+            <ul class="mylist">
                 <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li><br>
                 <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li><br>
                 <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
             </ul>
+</p>
 
-
-        </td>
-    </tr>
-</table>
 
 <div class="subtitle" id="budget">Maitriser le budget</div>
-<table>
-    <tr>
-        <td>
-            Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
-            <br>
-            Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
-            Celui ci à tout intérêt à l'utiliser.
-        </td>
-        <td>
-            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/apple/232/money-bag_1f4b0.png" class="logo">
-        </td>
-    </tr>
-</table>
-Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.
-Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
 
-<br><br>
-Enfin vous fixez le budget total de votre promotion. Par exemple vous décidez d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
-de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+<img src="/img/screen4.png" class="logo-right">
+<p class="mytext">
+    Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
+    <br>
+    Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
+    Celui ci à tout intérêt à l'utiliser.<br><br>
 
-Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur.
+    Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.<br>
+    Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
 
+    <br><br>
+    Enfin vous fixez le budget total de votre promotion. Par exemple, vous pouvez décider d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
+    de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+
+    Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur. Lorsqu'il tombe à zéro, la promotion s'arrête.
+
+</p>
 
 
 
