--- a/faqs/init_shop.html
+++ b/faqs/init_shop.html
@@ -27,31 +27,34 @@ Avant de pouvoir lancer une promotion, il faut toujours créer le point de vente
 une adresse postale, ou virtuel avec une adresse internet (en développement).
 <br>
 
-<table><tr>
-    <td style="text-align: center;width:200px;">
-        <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/facebook/65/department-store_1f3ec.png"
-             style="width:100px;">
-    </td>
-    <td>
-        <p>
+<table>
+    <tr>
+        <td style="text-align: center;width:200px;">
+            <img src="https://emojipedia-us.s3.dualstack.us-west-1.amazonaws.com/thumbs/120/facebook/65/department-store_1f3ec.png"
+                 style="width:100px;">
+        </td>
+        <td>
             Le nom du point de vente peut être
             <ul>
-        <li>le nom de l'enseigne, de l'établissement</li>
-        <li>Votre propre pseudo</li>
-    </ul>
+                <li>le nom de l'enseigne, de l'établissement</li>
+                <li>Votre propre pseudo</li>
+            </ul>
 
-        Les réductions fabriquées sur ce point de vente peuvent être visible sur la carte des promotions. En revanche, cela n'est possible
-        que si votre compte est authentifié (par mail, facebook ou google). <br><br>
+            Les réductions fabriquées sur ce point de vente peuvent être visible
+            sur la carte des promotions. En revanche, cela n'est possible
+            que si votre compte est authentifié (par mail, facebook ou google). <br><br>
 
-        Les points de vente peuvent être taggés. Cela permet notamment aux clients de les retrouver plus facilement sur la carte des promotions.
-
-        </p>
-    </td>
-</tr></table>
+            Les points de vente peuvent être taggés. Cela permet notamment aux clients de les retrouver plus facilement sur la carte des promotions.
+            <br>
+            Enfin vous pouvez changer l'icône de votre point de vente avec un visuel de votre choix
+            qui peut être une photo ou une image extraite des banques de photos que REDUCSHARE utilise.
+        </td>
+    </tr>
+</table>
 <br>Une fois créé, votre point de vente peut être modifié. Depuis ce point de vente vous pouvez :
 <ul>
-    <li>Lancer des promotions</li>
-    <li>Editer une affiche permettant à vos clients de récupérer votre dernière promotion</li>
+    <li>Lancer des promotions,</li>
+    <li>Editer une affiche permettant à vos clients de récupérer votre dernière promotion,</li>
     <li>Analyser la diffusion de vos dernières promotions pour optimiser les suivantes</li>
 </ul>
 
