Website of ReducShare

--- a/faqs/init_shop.html
+++ b/faqs/init_shop.html
@@ -20,7 +20,7 @@
         padding-left:15px;
     }
 </style>
-<body style="background-color:#1f2d52;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
+<body style="background-color:#1e2049;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
 <h1 style="width:100%;text-align: center;">Créer votre point de vente</h1>
 <br>
 Avant de pouvoir lancer une promotion, il faut toujours créer le point de vente auquel elle est ratachée. Celui-ci peut être physique avec
