--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -48,12 +48,12 @@
     }
 
 </style>
-<body style="background-color:#11162c;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
+<body style="background-color:#1e2049;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
 <h1 style="width:100%;text-align: center;">Créer votre coupon promotionnel</h1>
 
 <br>
 <p class="mytext">
-Même si cela peut sembler un peu impressionnant au début, la fabrication d'une promotion est plutôt
+    Même si cela peut sembler un peu impressionnant au début, la fabrication d'une promotion est plutôt
 simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
 exactement à votre promotion.
     En gros, on décompose cela en 4 sections.
