Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <!--</iframe>-->
           <!---->
           <iframe style="display:inline-block;max-height:500px;width:80vmin;height:45vmin;" frameborder="0"
-                  src="https://www.youtube.com/embed/yOZDEYkMzaE"
+                  src="https://www.youtube.com/embed/j8zu9amWvaI"
                   allowfullscreen>
           </iframe>
         </div>
