Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -54,76 +54,86 @@
 <br>
 <p class="mytext">
     Même si cela peut sembler un peu impressionnant au début, la fabrication d'une promotion est plutôt
-simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
-exactement à votre promotion.
+    simple. Le principe consiste à adapter le modèle proposé pour le faire correspondre
+    exactement à votre promotion.
     En gros, on décompose cela en 4 sections.
 </p>
-<div class="subtitle" id="description">Descripion de votre promotion</div>
 
-        <img src="/img/screen0.png" class="logo">
-        <p class="mytext">
-            La fabrication d'un coupon promotionnel, commence souvent par trouver un modèle approchant afin de limiter le
-            nombre de champs à personnaliser.<br>
-            La première section décrit la nature de l'offre. En premier lieu il faut trouver une phrase d'accroche qui
-                sera présentée en premier dans votre promotion.<br><br>
-                Ensuite il faut préciser ce que le client gagne. Evidemment cela dépend de ce que vous vendez
+<div style="width:100%;text-align: center;">
+    <a href="javascript:ensavoirplus()">En savoir plus</a>
+</div>
 
-            <ul class="mylist">
-                <li>pour un commerce ça pourrat être une réduction sur le prix de certains articles</li>
-                <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes, une remise sur l'addition</li>
-                <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite, un petit déjeuné offert</li>
-                <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de cours, de massage</li>
-            </ul>
 
-            <br>
+<div id="zone" style="opacity: 0;">
 
-            Il faut ensuite indiquer le symbole de ce que l'on gagne. Ce symbole sera utilisable pour présenté
-            la promotion. Idéalement, cela peut être un emoticon mais également 'min' pour minute, "%"
-            pour une réduction sur un prix de vente.
+    <div class="subtitle" id="description">Descripion de votre promotion</div>
 
-            <br><br>
-            Enfin, il faut préciser les conditions d'application de la promotion. A minima le client doit
-            présenter son coupon de réduction sur son smartphone. Il est possible d'appliquer d'autres restrictions.
-            Par exemple,<br><br>
-            <ul class="mylist">
-                <li>pour un happy hour, on précisera que le coupon n'est valable qu'entre 17h et 19h par exemple</li>
-                <li>pour un commerçant on pourra préciser qu'une promotion ne s'applique que si le montant des achats est supérieur à un minimum prédéfini</li>
-            </ul>
+    <img src="/img/screen0.png" class="logo">
+    <p class="mytext">
+        La fabrication d'un coupon promotionnel, commence souvent par trouver un modèle approchant afin de limiter le
+        nombre de champs à personnaliser.<br>
+        La première section décrit la nature de l'offre. En premier lieu il faut trouver une phrase d'accroche qui
+        sera présentée en premier dans votre promotion.<br><br>
+        Ensuite il faut préciser ce que le client gagne. Evidemment cela dépend de ce que vous vendez
 
-            On passe aux autres sections, mais vous avez fait le plus dur.
-        </p>
+    <ul class="mylist">
+        <li>pour un commerce ça pourrat être une réduction sur le prix de certains articles</li>
+        <li>pour un restaurant ou un bar ce sera des cafés, des bières offertes, une remise sur l'addition</li>
+        <li>pour un hotel, une maison d'hôte ce sera peut être une nuit gratuite, un petit déjeuné offert</li>
+        <li>pour un professeur particulier, un masseur, ce sera des minutes supplémentaires de cours, de massage</li>
+    </ul>
+
+    <br>
+
+    Il faut ensuite indiquer le symbole de ce que l'on gagne. Ce symbole sera utilisable pour présenté
+    la promotion. Idéalement, cela peut être un emoticon mais également 'min' pour minute, "%"
+    pour une réduction sur un prix de vente.
+
+    <br><br>
+    Enfin, il faut préciser les conditions d'application de la promotion. A minima le client doit
+    présenter son coupon de réduction sur son smartphone. Il est possible d'appliquer d'autres restrictions.
+    Par exemple,<br><br>
+    <ul class="mylist">
+        <li>pour un happy hour, on précisera que le coupon n'est valable qu'entre 17h et 19h par exemple</li>
+        <li>pour un commerçant on pourra préciser qu'une promotion ne s'applique que si le montant des achats est supérieur à un minimum prédéfini</li>
+    </ul>
+
+    On passe aux autres sections, mais vous avez fait le plus dur.
+    </p>
+
+
 
 <div class="projects-section">
-<div class="subtitle" id="visuel">Le visuel</div>
+    <div class="subtitle" id="visuel">Le visuel</div>
 
-<img src="/img/screen2.png"
-     class="logo-right">
-        <p>
-            Ici c'est simple ! <br>
-            on doit juste choisir une image pour le visuel principal du coupon.
-            Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
-            mis a votre disposition ou de votre téléphone, de votre ordinateur.<br>
+    <img src="/img/screen2.png"
+         class="logo-right">
+    <p>
+        Ici c'est simple ! <br>
+        on doit juste choisir une image pour le visuel principal du coupon.
+        Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
+        mis a votre disposition ou de votre téléphone, de votre ordinateur.<br>
 
-            <br>Bref toutes les sources sont possibles.<br><br>
+        <br>Bref toutes les sources sont possibles.<br><br>
 
-            Le système recadre volontairement l'image au mieux pour la présenter dans le format du coupon.
+        Le système recadre volontairement l'image au mieux pour la présenter dans le format du coupon.
 
-        </p>
+    </p>
 </div>
 
 
 <div id="avantage" class="subtitle">L'avantage client</div>
-            <img src="/img/screen3.png"
-                 class="logo">
-      <p class="mytext">
-            Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
-            <br><br>Permettre une augmentation significative permet d'augmenter la viralité de votre promotion. Il ne faut pas hésiter à vraiment récompenser le partage et la transformation, quitte à
-            limité le stock réservé à la promotion.
-            <ul class="mylist">
-                <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li><br>
-                <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li><br>
-                <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
-            </ul>
+<img src="/img/screen3.png"
+     class="logo">
+<p class="mytext">
+    Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
+    <br><br>Permettre une augmentation significative permet d'augmenter la viralité de votre promotion. Il ne faut pas hésiter à vraiment récompenser le partage et la transformation, quitte à
+    limité le stock réservé à la promotion.
+<ul class="mylist">
+    <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li><br>
+    <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li><br>
+    <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
+</ul>
 </p>
 
 
@@ -146,8 +156,22 @@ exactement à votre promotion.
     Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur. Lorsqu'il tombe à zéro, la promotion s'arrête.
 
 </p>
+</div>
 
+<script>
+    var op=0;
+    var handle;
 
+    function ensavoirplus(){
+        handle=setInterval(()=>{
+            op+=0.1;
+            document.getElementById("zone").style.opacity=op;
+
+            if(op==1)clearInterval(handle);
+        },100)
+
+    }
+</script>
 
 
 </body>
