Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -49,7 +49,7 @@
 
 </style>
 <body style="background-color:#1e2049;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
-<h1 style="width:100%;text-align: center;">Créer votre coupon promotionnel</h1>
+<h1 style="width:100%;text-align: center;">Aide à la création de votre coupon promotionnel</h1>
 
 <br>
 <p class="mytext">
@@ -60,11 +60,11 @@
 </p>
 
 <div style="width:100%;text-align: center;">
-    <a href="javascript:ensavoirplus()">En savoir plus</a>
+    <a href="javascript:ensavoirplus(1)">En savoir plus</a>
 </div>
 
 
-<div id="zone" style="opacity: 0;">
+<div id="zone1" style="opacity: 0;">
 
     <div class="subtitle" id="description">Descripion de votre promotion</div>
 
@@ -100,75 +100,86 @@
 
     On passe aux autres sections, mais vous avez fait le plus dur.
     </p>
+</div>
 
-
-
-<div class="projects-section">
-    <div class="subtitle" id="visuel">Le visuel</div>
-
-    <img src="/img/screen2.png"
-         class="logo-right">
-    <p>
-        Ici c'est simple ! <br>
-        on doit juste choisir une image pour le visuel principal du coupon.
-        Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
-        mis a votre disposition ou de votre téléphone, de votre ordinateur.<br>
-
-        <br>Bref toutes les sources sont possibles.<br><br>
-
-        Le système recadre volontairement l'image au mieux pour la présenter dans le format du coupon.
-
-    </p>
+<div style="width:100%;text-align: center;">
+    <a href="javascript:ensavoirplus(2)">En savoir plus</a>
 </div>
 
 
-<div id="avantage" class="subtitle">L'avantage client</div>
-<img src="/img/screen3.png"
-     class="logo">
-<p class="mytext">
-    Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
-    <br><br>Permettre une augmentation significative permet d'augmenter la viralité de votre promotion. Il ne faut pas hésiter à vraiment récompenser le partage et la transformation, quitte à
-    limité le stock réservé à la promotion.
-<ul class="mylist">
-    <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li><br>
-    <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li><br>
-    <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
-</ul>
-</p>
+<div id="zone2" style="opacity: 0;">
 
 
-<div class="subtitle" id="budget">Maitriser le budget</div>
+    <div class="projects-section">
+        <div class="subtitle" id="visuel">Le visuel</div>
 
-<img src="/img/screen4.png" class="logo-right">
-<p class="mytext">
-    Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
-    <br>
-    Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
-    Celui ci à tout intérêt à l'utiliser.<br><br>
+        <img src="/img/screen2.png"
+             class="logo-right">
+        <p>
+            Ici c'est simple ! <br>
+            on doit juste choisir une image pour le visuel principal du coupon.
+            Celui ci est utilisé pour présenter le coupon de réduction après sa capture. L'image peut provenir de bibliothèque de photos
+            mis a votre disposition ou de votre téléphone, de votre ordinateur.<br>
 
-    Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.<br>
-    Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
+            <br>Bref toutes les sources sont possibles.<br><br>
 
-    <br><br>
-    Enfin vous fixez le budget total de votre promotion. Par exemple, vous pouvez décider d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
-    de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+            Le système recadre volontairement l'image au mieux pour la présenter dans le format du coupon.
 
-    Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur. Lorsqu'il tombe à zéro, la promotion s'arrête.
+        </p>
+    </div>
+</div>
 
-</p>
+<div style="width:100%;text-align: center;">
+    <a href="javascript:ensavoirplus(3)">En savoir plus</a>
+</div>
+
+<div id="zone3" style="opacity: 0;">
+    <div id="avantage" class="subtitle">L'avantage client</div>
+    <img src="/img/screen3.png"
+         class="logo">
+    <p class="mytext">
+        Dans cette section on va décrire comment l'avantage du client (ce qu'il gagne) va augmenter suivant ce qu'il décide de faire.
+        <br><br>Permettre une augmentation significative permet d'augmenter la viralité de votre promotion. Il ne faut pas hésiter à vraiment récompenser le partage et la transformation, quitte à
+        limité le stock réservé à la promotion.
+    <ul class="mylist">
+        <li>Le gain du client peut commencer dés la récupération du coupon. Il est interessant de lui proposer tout de suite quelque chose pour l'inciter à récupérer le coupon</li><br>
+        <li>Le gain peut augmenter à chaque fois que le client partage le coupon à ses relations. Plus exactement la récompense est donnée lorsque le destinataire récupére le coupon</li><br>
+        <li>Le gain peut enfin augmenter pour celui qui à partagé le coupon lorsque le destinataire utilise sa réduction car finalement, dans ce cas, votre client s'est vraiment transformé en vendeur.</li>
+    </ul>
+    </p>
+
+
+    <div class="subtitle" id="budget">Maitriser le budget</div>
+
+    <img src="/img/screen4.png" class="logo-right">
+    <p class="mytext">
+        Evidemment il est essentiel de parfaitement maitriser le budget aloué à votre promotion.<br>
+        <br>
+        Première chose : vous allez fixer un plafond à l'avantage client. Une fois ce plafond atteint la promotion du client n'augmente plus.
+        Celui ci à tout intérêt à l'utiliser.<br><br>
+
+        Vous allez aussi fixer la durée de validité en jours et en heures de la promotion. Vous pouvez écrire 0,5 heure pour faire 30 minutes.<br>
+        Au delà de cette durée, l'ensemble des coupons disparaissent des téléphones des clients qui ne l'ont pas encore utilisés.
+
+        <br><br>
+        Enfin vous fixez le budget total de votre promotion. Par exemple, vous pouvez décider d'offrir des cafés mais vous déclarer que vous n'offirez pas plus
+        de 50 cafés tout client confondu. Une fois les 50 cafés distribués, la promotion disparait comme lorsqu'on dépasse la durée de validité.
+
+        Le stock restant est remis à jour en temps réel. Il est de plus modifiable à tout instant par le vendeur. Lorsqu'il tombe à zéro, la promotion s'arrête.
+
+    </p>
 </div>
 
 <script>
     var op=0;
     var handle;
 
-    function ensavoirplus(){
+    function ensavoirplus(i){
         handle=setInterval(()=>{
             op+=0.1;
-            document.getElementById("zone").style.opacity=op;
-
+            document.getElementById("zone"+i).style.opacity=op;
             if(op==1)clearInterval(handle);
-        },100)
+        },50);
 
     }
 </script>
