Website of ReducShare

--- a/faqs/init_coupon.html
+++ b/faqs/init_coupon.html
@@ -48,7 +48,7 @@
     }
 
 </style>
-<body style="background-color:#1e2049;border: none;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
+<body style="background-color:#1e2049;padding:10px;font-family: Roboto;color:white;font-weight: lighter;">
 <h1 style="width:100%;text-align: center;">Aide à la création de votre coupon promotionnel</h1>
 
 <br>
@@ -59,7 +59,7 @@
     En gros, on décompose cela en 4 sections.
 </p>
 
-<div style="width:100%;text-align: center;">
+<div style="width:100%;text-align: right;">
     <a href="javascript:ensavoirplus(1)">En savoir plus</a>
 </div>
 
@@ -100,15 +100,17 @@
 
     On passe aux autres sections, mais vous avez fait le plus dur.
     </p>
+
+    <div style="width:100%;text-align: right;">
+        <a href="javascript:ensavoirplus(2)">En savoir plus</a>
+    </div>
+
+
 </div>
 
-<div style="width:100%;text-align: center;">
-    <a href="javascript:ensavoirplus(2)">En savoir plus</a>
-</div>
 
 
 <div id="zone2" style="opacity: 0;">
-
 
     <div class="projects-section">
         <div class="subtitle" id="visuel">Le visuel</div>
@@ -127,11 +129,14 @@
 
         </p>
     </div>
+
+    <div style="width:100%;text-align: right;">
+        <a href="javascript:ensavoirplus(3)">En savoir plus</a>
+    </div>
+
 </div>
 
-<div style="width:100%;text-align: center;">
-    <a href="javascript:ensavoirplus(3)">En savoir plus</a>
-</div>
+
 
 <div id="zone3" style="opacity: 0;">
     <div id="avantage" class="subtitle">L'avantage client</div>
