--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               <li>de faire des promos flash, valables de plusieurs jours à quelques minutes !</li>
               <li>de rendre vos promotions visibles aux clients proches de votre enseigne,</li>
               <li>de maitriser le coût de votre promotion et d'analyser la diffusion et les gains générés</li>
+              <li>d'analyser la diffusion et le taux de transformation de vos promotions pour optimiser les campagnes</li>
             </ul>
             <br>
           <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
@@ -253,23 +254,23 @@
         </div>
       </div>
 
-      <br><br>
-      <span class="text-light">
-      Pour en savoir plus sur les outils d'analyse et comparaison de campagne promotionnelle via REDUCSHARE:
-      </span>
+      <!--<br><br>-->
+      <!--<span class="text-light">-->
+      <!--Pour en savoir plus sur les outils d'analyse et comparaison de campagne promotionnelle via REDUCSHARE:-->
+      <!--</span>-->
 
-      <div class="row" style="height:400px;">
-        <div class="col-md-10 col-lg-8 mx-auto text-center">
-          <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/yOZDEYkMzaE" frameborder="0" -->
-                  <!--allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>-->
+      <!--<div class="row" style="height:400px;">-->
+        <!--<div class="col-md-10 col-lg-8 mx-auto text-center">-->
+          <!--&lt;!&ndash;<iframe width="560" height="315" src="https://www.youtube.com/embed/yOZDEYkMzaE" frameborder="0" &ndash;&gt;-->
+                  <!--&lt;!&ndash;allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>&ndash;&gt;-->
+          <!--&lt;!&ndash;</iframe>&ndash;&gt;-->
+          <!--&lt;!&ndash;&ndash;&gt;-->
+          <!--<iframe style="display:inline-block;max-height:500px;width:80vmin;height:45vmin;" frameborder="0"-->
+                  <!--src="https://www.youtube.com/embed/j8zu9amWvaI"-->
+                  <!--allowfullscreen>-->
           <!--</iframe>-->
-          <!---->
-          <iframe style="display:inline-block;max-height:500px;width:80vmin;height:45vmin;" frameborder="0"
-                  src="https://www.youtube.com/embed/j8zu9amWvaI"
-                  allowfullscreen>
-          </iframe>
-        </div>
-      </div>
+        <!--</div>-->
+      <!--</div>-->
 
 
 
