Website of ReducShare

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
       <br><br>
       <span class="text-light">
       REDUCSHARE permet de fabriquer rapidement de nombreux types de promotions.<br>
-        Voici quelques exemples que vous pouvez personnaliser et <span class="text-primary">TESTER MAINTENANT !</span>
+        Voici quelques exemples que vous pouvez <span class="text-primary">TESTER IMMEDIATEMENT !</span> et personnaliser pour les faire correspondre à votre besoin
       </span>
       <br><br>
       <hr class="d-none d-lg-block" style="width:40%;border:#0f6674 solid 2px;">
