Website of ReducShare

--- a/faq.html
+++ b/faq.html
@@ -110,14 +110,58 @@
                 <li>de pouvoir faire des promotions flash sur des durées courtes</li>
               </ul>
           <br>
-          Pour en savoir plus sur le fonctionnement <br> :
+
+        <div class="text-center">
+          Pour en savoir plus sur le fonctionnement :<br>
           <iframe style="display:inline-block;width:80vmin;height:45vmin;" frameborder="0"
                   src="https://mega.nz/embed#!MGJhHaAb!KOTiazcMQbL82-gVRrMLsy33cpGEXBnGH5cU_T65uTk"
                   allowfullscreen>
           </iframe>
 
+        </div>
 
 
+
+
+      </div>
+    </div>
+
+
+    <!-- Card header -->
+    <div class="card-header" role="tab" id="headingOne2">
+      <a data-toggle="collapse" data-parent="#accordionEx"
+         href="#collapseOne2" aria-expanded="true"
+         aria-controls="collapseOne1">
+        <h5 class="mb-0">
+          C'est quoi le couponing, l'e-couponing, l'm-couponing ?
+          <i class="fas fa-angle-down rotate-icon"></i>
+        </h5>
+      </a>
+    </div>
+
+    <!-- Card body -->
+    <div id="collapseOne2" class="collapse show" role="tabpanel"
+         aria-labelledby="headingOne2"
+         data-parent="#accordionEx">
+      <div class="card-body">
+        REDUCSHARE est une application de m-couponing. Le M-Couponing, c’est un bon de réduction dématérialisé que le client reçoit sur son mobile. Il lui suffit de présenter son téléphone en caisse pour en bénéficier
+        <br><br>
+
+        Il existe de nombreux articles disponibles sur internet pour en expliquer les principes & les avantages :
+
+        <ul>
+          <li><a href="https://commerce.life/le-m-couponing-le-bon-de-reduction-nouvelle-generation/">Le M-couponing, le bon de réduction nouvelle génération</a></li>
+          <li><a href="https://www.tactill.com/blog/m-couponing-faut-il-adopter-cette-tendance/">M-couponing : faut-il adopter cette tendance ?</a></li>
+          <li><a href="https://fr.wikipedia.org/wiki/Marketing_mobile">Marketing mobile</a></li>
+        </ul>
+
+        Les principes du m-couponing existe depuis bientôt 10 ans. Les nouveautés qu'apporte REDUCSHARE sont nombreuses :
+        <ul>
+          <li>Des coupons dont l'avantage augmente avec la diffusion,</li>
+          <li>Une gestion de la campagne en temps réel depuis un simple mobile,</li>
+          <li>La confidentialité pour les clients,</li>
+          <li>La simplicité et la gratuité pour pour les vendeurs</li>
+        </ul>
 
       </div>
     </div>
